@@ -4,11 +4,12 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.12.RELEASE'
-  id 'org.springframework.boot' version '2.7.1'
+  id 'org.springframework.boot' version '2.7.5'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.3'
-  id 'uk.gov.hmcts.java' version '0.12.27'
-  id 'com.github.hmcts.rse-cft-lib' version '0.19.302'
+  id 'uk.gov.hmcts.java' version '0.12.34'
+  id 'com.github.hmcts.rse-cft-lib' version '0.19.496'
+  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.23'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -99,14 +100,68 @@ tasks.withType(Test) {
 }
 
 test {
+  generateCucumberReports.enabled = false
   failFast = true
 }
 
-task functional(type: Test) {
+task functional(type: JavaExec) {
+  dependsOn 'bootJar'
+
+  doFirst {
+    // clear away any previous BEFTA report output to prevent it being re-processed after a pre-cucumber error
+    cleanBeftaReports()
+
+    boolean ciBuild = System.getenv().get("CI_BUILD") ?: false
+    if (!ciBuild) {
+      loadEnvFile(it, '.env.befta.local.env')
+      // Override with alternative test stub environment variables (i.e. if using bootWithCcd: need alternative test stub URL)
+      loadEnvFile(it, '.env.test.stub.service.env')
+    }
+  }
+
   description = "Runs functional tests"
   group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
+
+  generateCucumberReports.enabled = false
+  mainClass = 'uk.gov.hmcts.reform.next.hearing.date.updater.befta.ServiceBeftaMain'
+  classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+  args = [
+    '--strict',
+    '--threads', '1', // Setting this to single thread as the application is not designed to have the FTs run in parallel
+    '--plugin', "json:${rootDir}/target/cucumber.json",
+    '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+    '--tags', 'not @Ignore',
+    '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+  ]
+  // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+  jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+
+  finalizedBy {
+    generateCucumberReports.enabled = true
+    generateCucumberReports {
+      doLast{
+        delete "${buildDir}/reports/tests/functional/"
+        new File("${buildDir}/reports/tests/functional").mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${buildDir}/reports/tests/functional"))
+        logger.quiet("Functional test report moved to ---> file://${buildDir}/reports/tests/functional/overview-features.html")
+      }
+    }
+  }
+
+  outputs.upToDateWhen { false }
+}
+
+cucumberReports {
+  outputDir = file("${rootDir}/target/cucumber")
+  reports = files("${rootDir}/target/cucumber.json")
+}
+
+void cleanBeftaReports() {
+  logger.quiet("Delete all previous BEFTA report files.")
+  delete "${buildDir}/test-results/functional/"
+  delete "${buildDir}/reports/tests/functional/"
+  delete "${rootDir}/target/cucumber"
+  delete "${rootDir}/target/cucumber.json"
 }
 
 task integration(type: Test) {
@@ -192,8 +247,9 @@ repositories {
 ext {
   reformLogging = '6.0.1'
   lombokVersion = '1.18.24'
-  jacksonVersion = '2.13.3'
+  jacksonVersion = '2.14.1'
   springFrameworkVersion = '5.3.22'
+  cucumberVersion = '5.7.0'
   wiremockVersion = '2.33.2'
   elasticsearchVersion = '7.17.6'
   testcontainersVersion = '1.17.3'
@@ -205,8 +261,19 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
   implementation group: 'org.springframework', name:'spring-webmvc', version: springFrameworkVersion
 
+  implementation group:'org.springframework.security', name: 'spring-security-config', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-core', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-crypto', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.7.5'
+  implementation group:'org.springframework.security', name: 'spring-security-web', version: '5.7.5'
+
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
+
+  implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLogging
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLogging
@@ -215,9 +282,10 @@ dependencies {
 
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.3'
   implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
+  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
-  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
-  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.0.1'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.1'
+  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.1.1'
   implementation group: 'com.github.hmcts', name: 'ccd-client', version: 'v4.9.1'
 
   implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.3.1'
@@ -236,7 +304,7 @@ dependencies {
   testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
 
-  // CFTLib
+  // CFTLib dependencies
   cftlibImplementation group: 'org.testcontainers', name: 'testcontainers', version: testcontainersVersion
 
   cftlibTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -257,6 +325,19 @@ dependencies {
   integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
   integrationTestImplementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
+
+  // Functional test dependencies
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
+  functionalTestImplementation sourceSets.integrationTest.runtimeClasspath
+  functionalTestImplementation group: 'io.cucumber', name: 'cucumber-junit', version: cucumberVersion
+  functionalTestImplementation group: 'io.cucumber', name: 'cucumber-java', version: cucumberVersion
+  functionalTestImplementation group: 'io.vavr', name: 'vavr', version: '0.10.4'
+  functionalTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
+
+  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.6'
+  functionalTestImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.19.5'
+
 }
 
 mainClassName = 'uk.gov.hmcts.reform.next.hearing.date.updater.ApplicationBootstrap'
@@ -274,15 +355,48 @@ rootProject.tasks.named("processSmokeTestResources") {
   duplicatesStrategy = 'include'
 }
 
+rootProject.tasks.named("processFunctionalTestResources") {
+  duplicatesStrategy = 'include'
+}
+
 rootProject.tasks.named("processIntegrationTestResources") {
   duplicatesStrategy = 'include'
 }
+
 wrapper {
   distributionType = Wrapper.DistributionType.ALL
 }
 
 bootWithCCD {
+  doFirst {
+    // NB: must delete befta local run details to force re-import of def file with updated test stub URL
+    delete "befta_recent_executions_info_LOCAL.json"
+
+    // Set this flag to 'true', if you want the CFTLib containers to be recreates each time
+    environment "RSE_LIB_CLEAN_BOOT", false
+  }
+
   authMode = uk.gov.hmcts.rse.AuthMode.Local
   environment("DATA_STORE_S2S_AUTHORISED_SERVICES", "ccd_gw,ccd_gateway,ccd_data,ccd_next_hearing_date_updater")
   environment("RSE_LIB_S2S_PORT", 4502)
+}
+
+void loadEnvFile(Task execTask, String envFilePath) {
+  if (file(envFilePath).exists()) {
+    logger.quiet("Loading environment variables from '${envFilePath}'")
+
+    file(envFilePath).readLines().each() {
+      if (it.startsWith('# ')) {
+        if (it.startsWith('# WARNING')) {
+          // copy warning to console
+          logger.quiet(it)
+        }
+      } else if (!it.isEmpty()) {
+        def (key, value) = it.tokenize('=')
+        execTask.environment(key, value)
+      }
+    }
+  } else {
+    logger.quiet("Skipping load of environment variables from '${envFilePath}' as file not found.")
+  }
 }
